# DeficienteBot_Telegram

./: .gitignore  .hadolint.yml  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  Justfile  Makefile  README.md  build.rs  compose.yaml  docker-compose.yml  dockerfile  e1a47ea1-b951-4d16-8b9d-1dab0afa6e4f.webm  go.mod  go.sum  main.go  output.webm  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  renovate.json
.cargo/: config.toml
.github/: dependabot.yml
.github copy/workflows/: main.yaml
.github/workflows/: audit.yml  build.yml  clippy.yml  deploy.yml  hadolint.yml  latest.yaml  machete.yml  main.yaml  main.yml  pr.yml  pull_request.yml  pull_request_rust.yaml  tagging.yaml  test.yml
dev/: docker-compose.yaml
infra/: 00app.yaml  00secrets.yaml  00volume.yaml  01certificates.yaml  02service.yaml  03ingress.yaml  kustomization.yaml
src/: error.rs  index.js  lib.rs  main.go  main.rs  messages.rs  redis_connection.rs  social_media_handler.rs  spotify_handler.rs  telemetry.rs  utils.rs
src/checks/: copypastas.rs  mod.rs  telegram_message.rs
src/message_checks/: bad_words.rs  copypasta.rs  friday.rs  instagram.rs  magnets.rs  mod.rs  reddit.rs  thursday.rs  tiktok.rs  twitter.rs  url.rs  webm.rs
src/messages/: mod.rs  telegram_message.rs
src/metrics/: metrics.go
src/online_downloads/: mod.rs  url_checker.rs  video_downloader.rs
src/prank/: day_check.rs  mario.rs  mod.rs  randomizer.rs  reverse_words.rs  sarcastic_agree.rs
src/ranking/: counters.rs  leaderboards.rs  mod.rs  rank.rs
src/routines/: birthdays.rs  mod.rs  specialEvents.go  utils.rs
src/services/: badWords.go  copyPasta.go  javi.go  messageParser.go  numbers.go  thursday.go  vxtwitter.go  webm.go
src/spotify/: album.rs  artist.rs  client.rs  mod.rs  playlist.rs  song.rs  utils.rs
src/tests/: mod.rs  tests_deficiente.rs  tests_numerical.rs  tests_vxtwitter.rs
tests/: test_spotify.rs  test_tiktok.rs  test_twitter.rs  test_url.rs  test_webm.rs  tests_bad_words.rs  tests_copypasta.rs  tests_thursday.rs
