[package]
name = "deficiente_telegram_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "deficiente_telegram_bot"


[build-dependencies]
walkdir = "2.5.0"

[dependencies]
tokio = { version = "1.37", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "time",
] }
tokio-stream = "0.1.15"
anyhow = "1.0.95"
chrono = "0.4.38"
color-eyre = "0.6.3"
pretty_env_logger = "0.5.0"
rand = "0.9.0"
rayon = "1.10.0"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["stream", "json"] }
rust-embed = "8.5.0"
teloxide = { version = "0.15.0", features = ["macros", "webhooks-axum"] }
tracing = "0.1.40"
url = "2.5.0"
uuid = "1.8.0"
mimalloc = { version = "0.1", default-features = false }
rspotify = "0.14.0"

[profile.release]
lto = true        # Already enabled
codegen-units = 1 # Optimize for size at the cost of compile time
opt-level = 3     # Maximum optimizations
panic = "abort"   # Remove panic unwinding code
strip = true      # Remove debug symbols
